Try to get intersections for 2 drugs, but method is not efficient so no results

--- a/notebooks/0-drug-data-exploration.ipynb
+++ b/notebooks/0-drug-data-exploration.ipynb
@@ -2,12 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'intersections' from '../scripts/intersections.py'>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import importlib\n",
+    "sys.path.insert(0, \"../scripts/\")\n",
+    "import intersections\n",
+    "importlib.reload(intersections)"
    ]
   },
   {
@@ -317,6 +341,22 @@
    "source": [
     "upsetplot.generate_data(n_samples=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersections_df = intersections.get_intersection(drug_sets_list, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
